# Rubiks_Cube_Solver

./: CMakeLists.txt  Rubiks_Cube_Solver.cpp  readme.md
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Rubiks_Cube_Models/: _1dArray.cpp  _3DArray.cpp  _3dArray.cpp  _bitBoard.cpp  rubiksCube.cpp  rubiksCube.h
Rubiks_Cube_Solvers/: BFS_Solver.h  DFS_Solver.h  IDAStar_Solver.h  ID_DFS_Solver.h
